@startuml splendor2

'    https://plantuml.com/class-diagram

/'
    Diagramme de classe du jeu Splendor Duel
    Pour programmation objet C++
'/

class Joueur{
    - nom : string
    - score : int
    - jetons : Jetons
    - cartes : Carte
    - privilege : Privilege

    acheterCarte() : Carte
}

class I_A {
    + jouer() : Joueur
}

class Physique {
    + jouer() : Joueur
}

class Partie {
    + joueur1 : Joueur
    + joueur2 : Joueur
    + espaceJeux : EspaceJeux
    + tour : int
    + fin : bool
}

class EspaceJeux {
    + sac : Sac
    + pyramide : Pyramide
    + plateau : Plateau
}

class Sac{
    + remplirPlateau() : Plateau
}

class Pyramide {
    + acheterCarte() : Carte
}

enum CouleurCarte

enum TypeCarte

enum Capacite

class Carte{
    - type : enum
    - prix : Prix
    - bonus : Bonus
    - capacite : enum
    - nbCouronnes : int
    - nbPtsPrivilege : int
    - reserve : bool
    + Carte()
    + ~Carte()
    + isReserve()
    + getReserve()
    + reserver()
    + getType()
    + getPrix() 
    + getCapacite()
    + getBonus()
    + getNbCouronnes() 
    + getNbPtsPrivilege()
}

class Bonus{
    - couleur : enum
    - nbBonus : int
    + Bonus()
    + setCouleur()
    + getCouleur()
    + getNbBonus()
}

class Prix{
    - blanc : int
    - bleu : int
    - vert : int
    - noir : int
    - rouge : int
    - perle : int
    + Prix()
    + getBlanc()
    + getBleu()
    + get...()
}

class Pioche {
    - type_cartes : enum
    - cartes : vector<Carte*>
    - nb_cartes : int
    + Pioche()
    + ~Pioche()
    + estVide()
    + getNbCartes()
    + piocher()
}

class Privilege {
    + nbPrivilege : int
}

class Jetons {
    + nbRouge : int
    + nbBleu : int
    + nbVert : int
    + nbBlanc : int
    + nbNoir : int
    + nbOr : int
    + nbPerle : int
}

class Plateau {
    + cartes : Carte
    + jetons : Jetons
    + privilege : Privilege
}

class JeuC {
    + lancer() : Partie
    + conditionsVictoire() : bool
}

class JeuCarte {
    - cartes_nv1 : array
    - cartes_nv2 : array
    - cartes_nv3 : array
    - cartes_nobles : array
    + JeuCarte()
    + ~JeuCarte()
    + getNbCartes_nv1()
    + getNbCartes_nv2()
    + getNbCartes_nv3()
    + getNbCartes_nobles()
    + getCarteNiv1()
    + getCarteNiv2()
    + getCarteNiv3()
    + getCarteNoble()
}

class LotJetons {
}

Physique *--- Joueur
I_A *--- Joueur

Carte *--- JeuCarte
Carte o-- Pyramide
Carte o-- Pioche
Carte o--- Joueur
Carte -- Bonus
Carte -- Prix
Carte -- CouleurCarte
Carte -- TypeCarte
Carte -- Capacite

Jetons *--- LotJetons
Jetons o-- Sac
Jetons o--- Joueur
Jetons o-- Plateau

Plateau o-- Privilege
Joueur o- Privilege

Partie *- EspaceJeux
Partie *- Joueur

EspaceJeux *-- Sac
EspaceJeux *-- Pyramide
EspaceJeux *-- Plateau

Jeu <-- Partie
@enduml